# Astra-Support

./: .gitignore  Arduino.cpp  Arduino.h  ArduinoMain.cpp  MockStorage.cpp  MockStorage.h  NativeTestHelper.h  README.md  SITLSocket.cpp  SPI.cpp  SPI.h  UnitTestSensors.h  WProgram.h  Wire.cpp  Wire.h  library.json  pyproject.toml
.githooks/: post-commit
.github/workflows/: cli_smoke.yml  pio_test_reusable.yml
datasets/astra-rocket/raw/: FMMORK.csv  FMMORK2.csv  NyxORK.csv  data_160.csv
docs/: command-contract-v1.md  support-contract-v1.md
flight-data/astra-rocket/: manifest.yaml
flight-data/astra-rocket/raw/: BR_HR_JAN.csv  BR_LR_JAN.csv  data_160_trimmed.csv
native-support/include/: Arduino.h  NativeFileLog.h  Print.h  SPI.h  unity_config.h
native-support/src/: Arduino.cpp
scripts/: bump_version.py  pio_native_linkflags.py
src/astra_support/: __init__.py  cli.py  console.py  prereqs.py  self_update.py
src/astra_support/assets/: run-support-workflow.yml
src/astra_support/commands/: doctor.py  sim.py  sync.py  test.py
src/astra_support/config/: __init__.py  support_file.py
src/astra_support/platformio/: __init__.py  config.py
src/astra_support/sim/: __init__.py  data_sources.py  logging.py  plotting.py  session.py  sitl_process.py  sources.py  telemetry.py  transport.py
tests/: test_bump_version.py  test_cli.py  test_logging.py  test_platformio_config.py  test_plotting.py  test_prereqs.py  test_self_update.py  test_session.py  test_sitl_process.py  test_sources.py  test_support_file.py  test_sync_command.py
(+15 files in other folders)
